vendor/ocaml/testsuite/tests/backtrace/backtrace.b.byte.reference
b
Fatal error: exception Backtrace.Error("b")
Raised at file "backtrace.ml", line 7, characters 21-32
Called from file "backtrace.ml", line 7, characters 42-53
Called from file "backtrace.ml", line 7, characters 42-53
Called from file "backtrace.ml", line 7, characters 42-53
Called from file "backtrace.ml", line 7, characters 42-53
Called from file "backtrace.ml", line 7, characters 42-53
Called from file "backtrace.ml", line 11, characters 4-11
Re-raised at file "backtrace.ml", line 13, characters 68-71
Called from file "backtrace.ml", line 18, characters 9-25
